# avril

./: Cargo.toml  shell.nix
src/: main.rs  midi.rs  seed.rs  stream.rs  theory.rs  var.rs
