[package]
name = "avril"
version = "0.1.0"
authors = ["Kier Davis <me@kierdavis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# either = "*"
fnv = "*"
midi = "*"
midir = "0.7.0"
rand = { version = "*", features = ["small_rng"] }
rand_distr = "*"
itertools = "*"
